@@ -227,7 +227,7 @@ class FrontendForm(ModelForm):
                            "cybereason_host", "cybereason_username", "cybereason_password",
                            "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                            "carbon_black_host", 'carbon_black_orgkey', 'carbon_black_apikey',
-                           "netskope_host", 'netskope_apikey', 'netskope_page_logs', 'netskope_network_logs', 'netskope_application_logs',
+                           "netskope_host", 'netskope_apikey', 'netskope_get_page_logs', 'netskope_get_network_logs', 'netskope_get_application_logs',
                            'rapid7_idr_host', 'rapid7_idr_apikey',
                            'harfanglab_host', 'harfanglab_apikey',
                            'nozomi_probe_host', 'nozomi_probe_login', 'nozomi_probe_password',
@@ -340,7 +340,7 @@ class FrontendForm(ModelForm):
                   "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                   "proofpoint_tap_secret",
                   "sentinel_one_host", "sentinel_one_apikey", "sentinel_one_account_type",
-                  'netskope_host', 'netskope_apikey', 'netskope_page_logs', 'netskope_network_logs', 'netskope_application_logs',
+                  'netskope_host', 'netskope_apikey', 'netskope_get_page_logs', 'netskope_get_network_logs', 'netskope_get_application_logs',
                   'rapid7_idr_host', 'rapid7_idr_apikey',
                   'harfanglab_host', 'harfanglab_apikey',
                   'nozomi_probe_host', 'nozomi_probe_login', 'nozomi_probe_password',
@@ -484,9 +484,9 @@ class FrontendForm(ModelForm):
             'sentinel_one_account_type': Select(choices=SENTINEL_ONE_ACCOUNT_TYPE_CHOICES, attrs={'class': 'form-control select2'}),
             'netskope_host': TextInput(attrs={'class': 'form-control'}),
             'netskope_apikey': TextInput(attrs={'class': 'form-control'}),
-            'netskope_page_logs': CheckboxInput(attrs={'class': "js-switch"}),
-            'netskope_network_logs': CheckboxInput(attrs={'class': "js-switch"}),
-            'netskope_application_logs': CheckboxInput(attrs={'class': "js-switch"}),
+            'netskope_get_page_logs': CheckboxInput(attrs={'class': "js-switch"}),
+            'netskope_get_network_logs': CheckboxInput(attrs={'class': "js-switch"}),
+            'netskope_get_application_logs': CheckboxInput(attrs={'class': "js-switch"}),
             'carbon_black_host': TextInput(attrs={'class': 'form-control'}),
             'carbon_black_orgkey': TextInput(attrs={'class': 'form-control'}),
             'carbon_black_apikey': TextInput(attrs={'class': 'form-control'}),
