@@ -1422,24 +1422,24 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.netskope_page_logs.label }}</label>
+                          <label class="col-sm-3 control-label">{{ form.netskope_get_page_logs.label }}</label>
                           <div class="col-sm-5">
-                            {{ form.netskope_page_logs }}
-                            {{ form.netskope_page_logs.errors|safe }}
+                            {{ form.netskope_get_page_logs }}
+                            {{ form.netskope_get_page_logs.errors|safe }}
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.netskope_network_logs.label }}</label>
+                          <label class="col-sm-3 control-label">{{ form.netskope_get_network_logs.label }}</label>
                           <div class="col-sm-5">
-                            {{ form.netskope_network_logs }}
-                            {{ form.netskope_network_logs.errors|safe }}
+                            {{ form.netskope_get_network_logs }}
+                            {{ form.netskope_get_network_logs.errors|safe }}
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label">{{ form.netskope_application_logs.label }}</label>
+                          <label class="col-sm-3 control-label">{{ form.netskope_get_application_logs.label }}</label>
                           <div class="col-sm-5">
-                            {{ form.netskope_application_logs }}
-                            {{ form.netskope_application_logs.errors|safe }}
+                            {{ form.netskope_get_application_logs }}
+                            {{ form.netskope_get_application_logs.errors|safe }}
                           </div>
                         </div>
                       </div>
